--- a/allhHTMLtags.html
+++ b/allhHTMLtags.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-    <!-- h1 to h6 tag used to set a headingv size   -->
+    <!-- h1 to h6 tag used to set a heading size   -->
     <h3> creating first html page </h3>
     <!-- paragraph tags -->
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem repellendus totam expedita sit alias architecto,
         accusantium rerum voluptas quibusdam officia</p>
-    <!-- br tag usedn to break the line  -->
+    <!-- br tag used to break the line  -->
     <br>
     <!-- hr tag used to place a ruller on a web  page  -->
     <hr>
-    <!-- pre tag also a paragraph tag used to counmt all spaces  -->
+    <!-- pre tag also a paragraph tag used to count all spaces  -->
     <pre>
         this tag count all given         spaces 
     </pre>
